v0.6/guides/core-concepts/configuration-system.mdx
---
title: "Configuration System"
description: "How Bejibun loads configuration files and the global config() and env() helpers."
icon: "sliders"
---

Bejibun keeps configuration in plain TypeScript modules under `config/`. Each file exports a `default` object, and you
read values anywhere with the global `config()` helper.

## Configuration files

Every file in `config/` is a module with a default export:

```ts config/limiter.ts
const config: Record<string, any> = {
    limit: 30,
    duration: 60 // seconds
};

export default config;
```

The scaffold ships these files:

| File             | Configures                             |
| ---------------- | -------------------------------------- |
| `cache.ts`       | Cache driver & connections             |
| `command.ts`     | Extra `ace` command package paths      |
| `cors.ts`        | CORS headers                           |
| `database.ts`    | Database connection                    |
| `limiter.ts`     | Rate limiting                          |
| `performance.ts` | Toggle feature                         |
| `redis.ts`       | Redis connections                      |
| `route.ts`       | OpenAPI / Swagger template             |
| `storage.ts`     | Storage disks (via `@bejibun/storage`) |
| `websocket.ts`   | WebSocket server options               |
| `x402.ts`        | x402 payments                          |

<Note>
    The core provides built-in defaults for `cache`, `cors`, `limiter`, `redis`, and `websocket`. If you delete a
    project file, the bundled default is used.
</Note>

<Note>
    As of v0.6.0, `storage.ts` (formerly `disk.ts`) and `limiter.ts` are sourced from the standalone
    [`@bejibun/storage`](/v0.6/guides/storage/file-storage) and
    [`@bejibun/limiter`](/v0.6/guides/security/rate-limiting)
    packages rather than `@bejibun/core` itself, though `limiter.ts`'s shape (`limit` / `duration`) is unchanged.
</Note>

## Reading configuration

The global `config()` function reads values using dot notation -- the first segment is the file name:

```ts
config("storage.default");              // "local"
config("limiter.limit");                // 30
config("cache.connections.redis.host"); // 127.0.0.1
```

Provide a fallback for missing keys:

```ts
config("cache.default", "redis");
```

## Environment variables

The global `env()` helper reads from the environment (a thin wrapper over `Bun.env`):

```ts
env("APP_URL"); // "http://127.0.0.1:3000"
env("APP_ENV"); // "development"
```

Configuration files typically read environment variables themselves, keeping secrets out of source control:

```ts config/database.ts
import type {Knex} from "knex";

const config: Knex.Config = {
    client: "pg",
    connection: {
        host: env("DB_HOST"),
        port: env("DB_PORT"),
        user: env("DB_USER"),
        password: env("DB_PASSWORD"),
        database: env("DB_DATABASE")
    },
    migrations: {
        extension: "ts",
        directory: "./database/migrations",
        schemaName: "public",
        tableName: "migrations"
    },
    pool: {
        min: 0,
        max: 10
    },
    seeds: {
        extension: "ts",
        directory: "./database/seeders"
    }
};

export default config;
```

<Warning>
    Store credentials in `.env`, never in committed config files. Keep `.env` out of version control and
    use a separate set of values per environment.
</Warning>

See [Environment Variables](/v0.6/guides/getting-started/environment-variables) for the full list of variables the scaffold uses.